add reset css normalize

--- a/index.html
+++ b/index.html
@@ -7,38 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrap - Associação das ruas ao Palácio</title>
 
-    <style>
-        .container {
-            width: 35vw;
-            margin: auto;
-        }
-
-        .logo {
-            width: 100%;
-        }
-
-        .title {
-            text-align: center;
-        }
-
-        @media (max-width: 1400px) {
-            .container {
-                width: 70vw;
-                margin: auto;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/generic/reset.css">
 
 </head>
 
 <body>
 
-    <head>
+    <header>
         <div class="container">
-            <img src="./assets/logo.jpg" class="logo" alt="Logo da Adrap">
+            <div class="image-container">
+                <img src="./assets/logo.jpg" class="logo" alt="Logo da Adrap">
+            </div>
+            <div class="link-container">
+                <div>
+                    <a href="#">Sobre Nós</a>
+                    <p>Quem somos, e o que fazemos</p>
+                </div>
+                <div>
+                    <a href="#">Nossa Missão</a>
+                    <p>Objetivos, visão & compromisso</p>
+                </div>
+                <div>
+                    <a href="#">Doações</a>
+                    <p>Participe, doe e ajude nosso Projeto</p>
+                </div>
+            </div>
         </div>
-        <h1 class="title">Site em construção</h1>
-    </head>
+    </header>
 </body>
 
 </html>
