create header components

--- a/index.html
+++ b/index.html
@@ -7,29 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrap - Associação das ruas ao Palácio</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/generic/reset.css">
+    <link rel="stylesheet" href="./styles/main.css">
 
 </head>
 
 <body>
-
     <header>
-        <div class="container">
+        <div class="header-container">
             <div class="image-container">
                 <img src="./assets/logo.jpg" class="logo" alt="Logo da Adrap">
             </div>
-            <div class="link-container">
-                <div>
-                    <a href="#">Sobre Nós</a>
-                    <p>Quem somos, e o que fazemos</p>
+            <div class="links-container">
+                <div class="button">
+                    <a href="#" class="link">Sobre Nós</a>
+                    <p class="text">Quem somos, e o que fazemos</p>
                 </div>
-                <div>
-                    <a href="#">Nossa Missão</a>
-                    <p>Objetivos, visão & compromisso</p>
+                <div class="button -color-fourth">
+                    <a href="#" class="link">Nossa Missão</a>
+                    <p class="text">Objetivos, visão & compromisso</p>
                 </div>
-                <div>
-                    <a href="#">Doações</a>
-                    <p>Participe, doe e ajude nosso Projeto</p>
+                <div class="button -color-sixth">
+                    <a href="#" class="link">Doações</a>
+                    <p class="text">Participe, doe e ajude nosso Projeto</p>
                 </div>
             </div>
         </div>
