add 480px logo to small screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <header>
         <div class="header-container">
             <div class="image-container">
-                <img src="./assets/logo.jpg" class="logo" alt="Logo da Adrap">
+                <img srcset="./assets/logo-480.jpg 480w,
+                            ./assets/logo.jpg 1200w" size="(max-width: 480px) 480px" src="./assets/logo.jpg"
+                    class="logo" alt="Logo da Adrap">
             </div>
             <div class="links-container">
                 <div class="button">
