create projects section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="image-container">
+            <section class="image-container">
                 <img srcset="./assets/logo-480.jpg 480w,
                             ./assets/logo.jpg 1200w" size="(max-width: 480px) 480px" src="./assets/logo.jpg"
                     class="logo" alt="Logo da Adrap">
-            </div>
-            <div class="links-container">
+            </section>
+            <section class="links-container">
                 <div class="button">
                     <a href="#" class="link">Sobre Nós</a>
                     <p class="text">Quem somos, e o que fazemos</p>
@@ -37,9 +37,28 @@
                     <a href="#" class="link">Doações</a>
                     <p class="text">Participe, doe e ajude nosso Projeto</p>
                 </div>
-            </div>
+            </section>
         </div>
     </header>
+
+    <main>
+        <section class="project-container">
+            <h2 class="title">Projetos</h2>
+            <div class="project-card">
+                <img src="./assets/musica.png" class="image" alt="foto do projeto de musica">
+                <div class="text-content">
+                    <h3 class="sub-title">Musicalização Infantil</h3>
+                    <p class="text">
+                        Cursos de teclado, violão, bateria, percução voz e canto. Trabalho de musicalização infantil,
+                        ritmos e teoria musical
+                    </p>
+                </div>
+                <div class="button">
+                    <a href="#" class="link">Saiba Mais</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
