refactor and add cards to the project

--- a/index.html
+++ b/index.html
@@ -24,38 +24,68 @@
                             ./assets/logo.jpg 1200w" size="(max-width: 480px) 480px" src="./assets/logo.jpg"
                     class="logo" alt="Logo da Adrap">
             </section>
-            <section class="links-container">
-                <div class="button">
-                    <a href="#" class="link">Sobre Nós</a>
+
+            <nav class="menu">
+                <a href="#" class="button">
+                    Sobre Nós
                     <p class="text">Quem somos, e o que fazemos</p>
-                </div>
-                <div class="button -color-fourth">
-                    <a href="#" class="link">Nossa Missão</a>
+                </a>
+                <a href="#" class="button -color-fourth">
+                    Nossa Missão
                     <p class="text">Objetivos, visão & compromisso</p>
-                </div>
-                <div class="button -color-sixth">
-                    <a href="#" class="link">Doações</a>
+                </a>
+                <a href="#" class="button -color-sixth">
+                    Doações
                     <p class="text">Participe, doe e ajude nosso Projeto</p>
-                </div>
-            </section>
+                </a>
+            </nav>
         </div>
     </header>
 
     <main>
         <section class="project-container">
             <h2 class="title">Projetos</h2>
+
             <div class="project-card">
                 <img src="./assets/musica.png" class="image" alt="foto do projeto de musica">
-                <div class="text-content">
+
+                <div class="text-container">
                     <h3 class="sub-title">Musicalização Infantil</h3>
                     <p class="text">
-                        Cursos de teclado, violão, bateria, percução voz e canto. Trabalho de musicalização infantil,
-                        ritmos e teoria musical
+                        Cursos de teclado, violão, bateria, percução voz e canto.
+                        Trabalho de musicalização infantil, ritmos e teoria musical.
                     </p>
                 </div>
-                <div class="button">
-                    <a href="#" class="link">Saiba Mais</a>
+
+                <a href="#" class="button">Saiba Mais</a>
+            </div>
+
+            <div class="project-card -color-fourth">
+                <img src="./assets/teatro.jpg" class="image" alt="foto do projeto de teatro">
+
+                <div class="text-container">
+                    <h3 class="sub-title">Teatro Infantil</h3>
+                    <p class="text">
+                        Apresentação de danças, coreografias e teatros infantis
+                        com vários temas da sociedade
+                    </p>
                 </div>
+
+                <a href="#" class="button -color-fourth">Saiba Mais</a>
+            </div>
+
+            <div class="project-card -color-sixth">
+                <img src="./assets/ensino.jpg" class="image" alt="foto do projeto de ensino biblico">
+
+                <div class="text-container">
+                    <h3 class="sub-title">Ensino Biblico e historias infantis</h3>
+                    <p class="text">
+                        De forma ludica desenvolvemos o conhecimento pessoal
+                        e o conhecimento de Deus através de historias biblicas e de nossa cultura
+                    </p>
+                </div>
+
+                <a href="#" class="button -color-sixth">Saiba Mais</a>
             </div>
         </section>
     </main>
