refactory - change color name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Nossa Missão
                     <p class="text">Objetivos, visão & compromisso</p>
                 </a>
-                <a href="#" class="button -color-sixth">
+                <a href="#" class="button -color-fifth">
                     Doações
                     <p class="text">Participe, doe e ajude nosso Projeto</p>
                 </a>
@@ -74,7 +74,7 @@
                 <a href="#" class="button -color-fourth">Saiba Mais</a>
             </div>
 
-            <div class="project-card -color-sixth">
+            <div class="project-card -color-fifth">
                 <img src="./assets/ensino.jpg" class="image" alt="foto do projeto de ensino biblico">
 
                 <div class="text-container">
@@ -85,7 +85,7 @@
                     </p>
                 </div>
 
-                <a href="#" class="button -color-sixth">Saiba Mais</a>
+                <a href="#" class="button -color-fifth">Saiba Mais</a>
             </div>
         </section>
     </main>
