create team picture section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="project-container">
             <h2 class="title">Projetos</h2>
 
-            <div class="project-card">
+            <article class="project-card">
                 <img src="./assets/musica.png" class="image" alt="foto do projeto de musica">
 
                 <div class="text-container">
@@ -58,9 +58,9 @@
                 </div>
 
                 <a href="#" class="button">Saiba Mais</a>
-            </div>
+            </article>
 
-            <div class="project-card -color-fourth">
+            <article class="project-card -color-fourth">
                 <img src="./assets/teatro.jpg" class="image" alt="foto do projeto de teatro">
 
                 <div class="text-container">
@@ -72,9 +72,9 @@
                 </div>
 
                 <a href="#" class="button -color-fourth">Saiba Mais</a>
-            </div>
+            </article>
 
-            <div class="project-card -color-fifth">
+            <article class="project-card -color-fifth">
                 <img src="./assets/ensino.jpg" class="image" alt="foto do projeto de ensino biblico">
 
                 <div class="text-container">
@@ -86,8 +86,10 @@
                 </div>
 
                 <a href="#" class="button -color-fifth">Saiba Mais</a>
-            </div>
+            </article>
         </section>
+
+        <section class="team-picture"></section>
     </main>
 </body>
 
