--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
         </section>
 
         <section class="team-picture"></section>
+
+        <section class="team">
+            <h2 class="title">Nossa Equipe</h2>
+
+            <div class="team-container">
+                <article class="team-card">
+                    <p>Diretora</p>
+                    <img src="./assets/icleya.jpg" alt="foto da diretora Icleya">
+                    <p>Icleya Martins</p>
+                </article>
+                <article class="team-card">
+                    <p>Tesoureiro</p>
+                    <img src="./assets/icleya.jpg" alt="foto da tesoureiro Agnaldo">
+                    <p>Agnaldo</p>
+                </article>
+                <article class="team-card">
+                    <p>Instrutor</p>
+                    <img src="./assets/icleya.jpg" alt="foto da instrutor Carlos">
+                    <p>Carlos</p>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 
