create donation section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
                 </article>
             </div>
         </section>
+
+        <section class="donation">
+            <article class="text-container">
+                <h2 class="title">Doações</h2>
+                <p class="text">Precisamos de sua ajuda para manter esse projeto e levar cultura para as nossas crinças
+                </p>
+                <a href="#" class="button -color-fourth">Faça suas Doações</a>
+            </article>
+
+            <div class="image-container">
+                <img src="./assets/telescopio.jpg" class="image" alt="telescopio do projeto Adrap">
+            </div>
+        </section>
     </main>
 </body>
 
