create footer and address section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,27 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <section class="footer">
+            <p class="address">
+                Endereço: <br>
+                Av. João Gomes Redondo, 599<br>
+                Bairro: Parque Alvamar<br>
+                Sarndi - PR<br>
+                CEP: 87113-320<br>
+                Telefone: xxx-xxxxx<br>
+            </p>
+
+            <div class="maps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d915.2884989055491!2d-51.87524317075486!3d-23.418803668416846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ecd06aa02f898f%3A0x77a47d284734cd13!2sAv.%20Jo%C3%A3o%20Gomes%20Redondo%2C%20599%20-%20Parque%20Alvamar%2C%20Sarandi%20-%20PR%2C%2087113-320!5e0!3m2!1spt-BR!2sbr!4v1634150091955!5m2!1spt-BR!2sbr"
+                    width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+            </div>
+
+        </section>
+    </footer>
 </body>
 
 </html>
